# EWTSS_private

./: .gitignore  CLAUDE.md  DRS_BRIDGE_PORTS.md  README.md  cppdeveloper.md  haris_and_claude.md  icd-open-questions.md
cpp/tcp_parser_demo/: CMakeLists.txt
cpp/tcp_parser_demo/src/: binary_parser.cpp  binary_parser.h  main.cpp  xml_parser.cpp  xml_parser.h
drs-bridge-test-intergration-test/: PROJECT_OVERVIEW.md  README.md  bridge_err.txt  bridge_out.txt  bridge_stderr.txt  pyproject.toml  run_bridge.ps1  run_bridge_launcher.py  run_live.ps1  run_server_launcher.py  server_err.txt  server_stderr.txt  start_all.ps1
drs-bridge-test-intergration-test/contracts/kafka/: drs.control.schema.json  drs.roster.schema.json  hw.dp_ecm.telemetry.schema.json  system.health.schema.json  system.timesync.schema.json
drs-bridge-test-intergration-test/infrastructure/kafka/: README.md  create-topics.py
drs-bridge-test-intergration-test/parsers/dp_ecm/: CMakeLists.txt  dp_ecm_vu.def
drs-bridge-test-intergration-test/parsers/dp_ecm/include/: sdfc_endian.h  sdfc_frame.h
drs-bridge-test-intergration-test/parsers/dp_ecm/src/: dp_ecm_hf_encoder.cpp  dp_ecm_hf_parser.cpp  dp_ecm_vu_parser.cpp
drs-bridge-test-intergration-test/parsers/dp_ecm/tests/: test_frames.cpp  test_frames_vu.cpp
drs-bridge-test-intergration-test/parsers/reference/: CMakeLists.txt
drs-bridge-test-intergration-test/parsers/reference/include/: reference_parser.h
drs-bridge-test-intergration-test/parsers/reference/src/: dp_ecm_hf_parser.cpp  dp_ecm_vu_parser.cpp  reference_parser.cpp  sdfc_frame.cpp
drs-bridge-test-intergration-test/src/drs_bridge/: bridge.py  config.py  main.py  runtime.py
drs-bridge-test-intergration-test/src/drs_bridge/kafka/: command_consumer.py  control_publisher.py  health_publisher.py  telemetry_publisher.py
drs-bridge-test-intergration-test/src/drs_bridge/parsers/: parser_loader.py  profile_loader.py
drs-bridge-test-intergration-test/src/drs_bridge/profiles/: _schema.py  dp_ecm_hf.yaml  dp_ecm_vu.yaml
drs-bridge-test-intergration-test/src/drs_bridge/timesync/: tick_lag_detector.py
drs-bridge-test-intergration-test/src/drs_bridge/transport/: __init__.py
drs-bridge-test-intergration-test/tests/: conftest.py  test_bridge.py  test_roster_integration.py  test_runtime_roster.py
drs-bridge-test-intergration-test/tests/integration/: test_bridge_e2e.py
drs-bridge-test-intergration-test/tests/kafka/: test_health_events.py  test_roster_consumer.py
drs-bridge-test-intergration-test/tests/parsers/: test_dp_ecm_integration.py  test_parser_loader.py  test_reference_parser_integration.py
drs-bridge-test-intergration-test/tests/profiles/: test_profile_loader.py  test_roster_schema.py
drs-bridge-test-intergration-test/tests/transport/: test_transport.py
drs-bridge-test-intergration-test/tools/: debug_watch.py  dp_ecm_full_coverage.py  dp_ecm_simulator.py  drs_server.py  drs_server_hf.py  fake_drs_server.py  kafka_watch.py  publish_roster.py  test_dispatch.py
drs-bridge/parsers/aus/: CMakeLists.txt  aus.def
drs-bridge/parsers/aus/src/: aus_parser.cpp
drs-bridge/parsers/aus/tests/: test_aus_parser.cpp
drs-bridge/parsers/ca120/: CMakeLists.txt  ca120.def
drs-bridge/parsers/ca120/src/: ca120_parser.cpp
drs-bridge/parsers/ca120/tests/: test_frames_ca120.cpp
drs-bridge/parsers/cpp/: CMakeLists.txt
drs-bridge/parsers/cpp/comm_df/: comm_df.def  comm_df_frame_types.h  comm_df_parser.cpp
drs-bridge/parsers/cpp/common/: checksum.h  frame_buffer.h  json_writer.h  parser_api.h
drs-bridge/parsers/cpp/rdfs/: rdfs.def  rdfs_frame_types.h  rdfs_parser.cpp
drs-bridge/parsers/cpp/tests/: CMakeLists.txt
drs-bridge/parsers/cpp/tests/comm_df/: test_comm_df_parser.cpp
drs-bridge/parsers/ddf1gtx/: CMakeLists.txt  ddf1gtx.def
drs-bridge/parsers/ddf1gtx/src/: ddf1gtx_parser.cpp
drs-bridge/parsers/ddf1gtx/tests/: test_frames_ddf1gtx.cpp
drs-bridge/parsers/ddf550/: CMakeLists.txt  ddf550.def
drs-bridge/parsers/ddf550/src/: ddf550_parser.cpp
drs-bridge/parsers/ddf550/tests/: test_frames_ddf550.cpp
drs-bridge/parsers/dp_ecm/: CMakeLists.txt  README.md  dp_ecm_hf.def
drs-bridge/parsers/dp_ecm/hf/: CMakeLists.txt
drs-bridge/parsers/dp_ecm/include/: json_writer.h  sdfc_abi.h  sdfc_endian.h
drs-bridge/parsers/dp_ecm/src/: dp_ecm_hf_parser.cpp  dp_ecm_vu_parser.cpp
drs-bridge/parsers/dp_ecm/src/hf/: hf_groups.h  hf_json_utils.h  hf_shared.h
drs-bridge/parsers/dp_ecm/src/hf/format/: g100_format.cpp  g101_format.cpp  (+11 more)
drs-bridge/parsers/dp_ecm/tests/: test_frames.cpp  test_frames_vu.cpp
drs-bridge/parsers/dp_ecm/vu/: CMakeLists.txt
drs-bridge/parsers/esme/: CMakeLists.txt  esme_monvuhf.def
drs-bridge/parsers/esme/src/: esme_parser_monvuhf.cpp
drs-bridge/parsers/esme/tests/: test_frames_esme.cpp
drs-bridge/parsers/reference/: CMakeLists.txt  README.md
drs-bridge/parsers/reference/include/: reference_parser.h
drs-bridge/parsers/reference/src/: reference_parser.cpp
drs-bridge/parsers/rsec/: CMakeLists.txt  rsec.def
drs-bridge/parsers/rsec/src/: rsec_parser.cpp
drs-bridge/parsers/rsec/tests/: test_frames_rsec.cpp
drs-server/: README.md  pyproject.toml
drs-server/src/drs_server/: __main__.py  config.py  control_consumer.py  lifespan.py  main.py
drs-server/src/drs_server/api/: time_status.py
drs-server/src/drs_server/timesync/: ntp_monitor.py  poller.py  sync_state_engine.py  timesync_publisher.py
drs-server/tests/: test_config.py  test_control_consumer.py  test_integration_time_status.py  test_kafka_broker_integration.py  test_lifespan.py  test_main_construction.py  test_smoke.py
drs-server/tests/timesync/: test_ntp_monitor.py  test_poller.py  test_sync_state_engine.py  test_time_status.py  test_timesync_publisher.py
start_cpp/: CMakeLists.txt
start_cpp/hf_rpe/: CMakeLists.txt  hf_rpe_parser.def
start_cpp/hf_rpe/src/: hf_rpe_parser.cpp
start_cpp/hf_rpe/tests/: test_hf_rpe.cpp
start_cpp/vushf_rpe/: CMakeLists.txt  vushf_rpe_parser.def
start_cpp/vushf_rpe/src/: vushf_rpe_parser.cpp
start_cpp/vushf_rpe/tests/: test_vushf_rpe.cpp
(+469 files in other folders)
