[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drs-bridge"
version = "0.1.0"
description = "EWTSS v2 per-variant adapter (Python). Drives C++ parser libraries, mediates IRS frames to Kafka."
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
